# stopywatch

./: LICENSE  README.md  pyproject.toml
example/: test_stopywatch.py
stopywatch/: __init__.py
