[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stopywatch"
version = "0.0.0"
description = "stopwatch in python"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.10"
authors = [{ name = "Leon Foks", email = "nfoks@contractor.usgs.gov" }]
keywords = ["timing", "clock", "stopwatch"]
dependencies = ["numpy"]
classifiers = [
    'License :: OSI Approved',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Topic :: Utility'
]

[project.optional-dependencies]
docs = ["sphinx_gallery", "sphinx_rtd_theme"]

[tool.setuptools.packages.find]
where = ["."]
